<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="Map"/>
        <item
            android:id="@+id/nav_myprofile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_first_page_24px"
            android:title="@string/menu_logout" />
    </group>
</menu>