<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C32525"
    tools:context=".driverActivity">

    <ImageView
        android:id="@+id/pattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.1"
        android:contentDescription="@string/pattern"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pattern" />

    <Button
        android:id="@+id/newDriver"
        android:layout_width="218dp"
        android:layout_height="63dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/buttonstyle2"
        android:text="@string/new_driver"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/alreadyDriver"
        android:layout_width="218dp"
        android:layout_height="63dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/buttonstyle2"
        android:text="@string/already_a_driver"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/pattern"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/ic_launcher_background"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:onClick="backArrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24"
        tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>