<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Home_activity">

    <TextView
        android:id="@+id/roll"
        android:layout_width="180dp"
        android:layout_height="49dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/are_you_a"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/patient_button"
        android:layout_width="218dp"
        android:layout_height="63dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/patient"
        android:textAllCaps="false"
        android:textColor="@color/ic_launcher_background"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roll" />

    <Button
        android:id="@+id/driver_button"
        android:layout_width="218dp"
        android:layout_height="63dp"
        android:layout_marginStart="14dp"
        android:textSize="24sp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/buttonstyle"
        android:text="@string/driver"
        android:textAllCaps="false"
        android:textColor="@color/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_button"
        app:layout_constraintVertical_bias="0.032" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:onClick="backArrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24_black"
        tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>