<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#C32525"
    android:onClick="hideKeyboard"
    tools:context=".DriverRegistrationActivity">

    <ImageView
        android:id="@+id/pattern_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.1"
        android:contentDescription="@string/pattern_r"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pattern" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:onClick="backArrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:textColor="@color/ic_launcher_background"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/d_layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/driver_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/name"
            android:inputType="textUri"
            android:textColor="@color/ic_launcher_background"
            android:textColorHighlight="@color/design_default_color_secondary_variant"
            android:textColorHint="@color/ic_launcher_background"
            android:textColorLink="@color/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.087"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.025" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/d_layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d_layout3">

        <EditText
            android:id="@+id/driver_contactnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contact_number"
            android:inputType="phone"
            android:textColor="@color/ic_launcher_background"
            android:textColorHighlight="@color/ic_launcher_background"
            android:textColorHint="@color/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d_layout3"
            app:layout_constraintVertical_bias="0.032" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/d_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/gender"
        android:textColor="@color/ic_launcher_background"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d_layout4" />

    <RadioGroup
       android:id="@+id/d_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/pattern_r"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d_gender"
        app:layout_constraintVertical_bias="0.023">

        <RadioButton
            android:id="@+id/d_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/ic_launcher_background" />

        <RadioButton
            android:id="@+id/d_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/ic_launcher_background" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/d_layout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d_radioGroup">

        <EditText
            android:id="@+id/licenseNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="License Number"
            android:inputType="textUri"
            android:textColor="@color/ic_launcher_background"
            android:textColorHighlight="@color/ic_launcher_background"
            android:textColorHint="@color/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d_radioGroup"
            app:layout_constraintVertical_bias="0.032" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/d_layout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d_layout5">

        <EditText
            android:id="@+id/rcNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="RC Number"
            android:inputType="textUri"
            android:textColor="@color/ic_launcher_background"
            android:textColorHighlight="@color/ic_launcher_background"
            android:textColorHint="@color/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d_layout5"
            app:layout_constraintVertical_bias="0.032" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/d_layout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d_layout6">

        <EditText
            android:id="@+id/d_mailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:textColor="@color/ic_launcher_background"
            android:textColorHint="@color/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d_layout6"
            app:layout_constraintVertical_bias="0.035" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/d_layout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/ic_launcher_background"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d_layout7"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/ic_launcher_background">

        <EditText
            android:id="@+id/d_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/ic_launcher_background"
            android:textColorHint="@color/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d_layout7"
            app:layout_constraintVertical_bias="0.092" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/d_layout9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/ic_launcher_background"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d_layout8"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/ic_launcher_background">

        <EditText
            android:id="@+id/d_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Confirm Password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/ic_launcher_background"
            android:textColorHint="@color/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/d_layout8"
            app:layout_constraintVertical_bias="0.092" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
       android:id="@+id/driver_registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/register_button"
        android:text="@string/r_e_g_i_s_t_e_r"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d_layout9" />

    <ProgressBar
        android:id="@+id/d_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/white_circle"
        android:padding="15dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pattern_r"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>